# ntcompress

./: .editorconfig  .gitattributes  .gitignore  .yamllint.yml  CHANGELOG.md  Makefile  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml  security.yml
docs/: getting-started.md  index.md
docs/reference/: formats.md  spec-traceability.md
docs/reference/api/: ese-checksums.md  ese-formats.md  ese.md  exceptions.md  index.md  ntdll-formats.md  ntdll.md
docs/user-guide/: errors.md  ese.md  ntdll.md
src/ntcompress/: __init__.py  _types.py  exceptions.py
src/ntcompress/ese/: __init__.py  _registry.py  _sevenbit.py  checksums.py  lz4.py  scrub.py  sevenbit_ascii.py  sevenbit_unicode.py  xpress.py  xpress10.py  xpress9.py
src/ntcompress/ntdll/: __init__.py  _registry.py  deflate.py  lznt1.py  xp10.py  xpress.py  xpress9.py  xpress_huff.py  zlib.py
tests/: __init__.py  ese_gold_vectors.py  gold_vectors.py  test_gold_consistency.py  test_powerbi_xpress9.py  test_smoke.py
tests/ese/: __init__.py  test_checksums.py  test_format.py  test_integration.py  test_lz4.py  test_registry.py  test_scrub.py  test_sevenbit.py  test_xpress.py  test_xpress10.py  test_xpress9.py
tests/ntdll/: __init__.py  test_deflate_zlib.py  test_lznt1.py  test_ntdll_gold.py  test_per_os_gold.py  test_xpress_huff.py
